--- a/package.json
+++ b/package.json
@@ -23,11 +23,17 @@
     "@angular/platform-server": "^19.0.0",
     "@angular/router": "^19.0.0",
     "@angular/ssr": "^19.0.6",
+    "@popperjs/core": "~2.11.8",
+    "@svgdotjs/svg.js": "^3.2.4",
     "@types/proj4": "^2.5.6",
+    "apexcharts": "^4.5.0",
     "express": "^4.18.2",
+    "ng-apexcharts": "^1.15.0",
+    "ngx-apexcharts": "^0.7.1",
     "ol": "10.1",
     "proj4": "^2.15.0",
     "rxjs": "~7.8.0",
+    "svg": "^0.1.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
@@ -44,6 +50,6 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.6.2"
+    "typescript": "^5.8.2"
   }
 }
