--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
     "skipLibCheck": true,
+    "strictPropertyInitialization": false,
     "isolatedModules": true,
     "esModuleInterop": true,
     "experimentalDecorators": true,
