--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "cm635",
+  "name": "GeoByCM",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build --configuration=production",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:cm635": "node dist/cm635/server/server.mjs"
+    "serve:ssr:GeoByCM": "node dist/GeoByCM/server/server.mjs"
   },
   "private": true,
   "dependencies": {
@@ -40,7 +40,7 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "^19.0.6",
     "@angular/cli": "^19.0.6",
-    "@angular/compiler-cli": "^19.0.0",
+    "@angular/compiler-cli": "^19.2.6",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
