--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,7 +19,7 @@ jobs:
         node-version: '22'
 
     - name: 📦 Install dependencies
-      run: npm ci
+      run: npm install
 
     - name: 🔨 Build SSR
       run: npm run build
