--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,6 +39,6 @@ jobs:
         git add .
         git commit -m "Deploy build $(date +'%Y-%m-%d %H:%M')"
 
-        git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
+        git remote set-url origin https://x-access-token:${{ secrets.PAT }}@github.com/${{ github.repository }}
         git branch -M build
         git push -f origin build
