--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,6 +27,9 @@ jobs:
     - name: 🔨 Build Angular SSR
       run: npm run build
 
+    - name: 📁 Copier monfichier.txt dans dist/browser
+      run: cp .htaccess dist/GeoByCM/browser/
+
     - name: 🚀 Push dist/ to branch "build"
       run: |
         git config user.name "github-actions[bot]"
