--- a/angular.json
+++ b/angular.json
@@ -25,6 +25,7 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/ol/ol.css",
               "@angular/material/prebuilt-themes/azure-blue.css",
               "src/styles.css"
             ],
